# ros2_Robopoint

./: .gitignore  README.md
docker/: Dockerfile  docker_run.sh
ros2_ws/src/my_image_pub_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_image_pub_pkg/launch/: image_pub_launch.py  pub_launch.py
ros2_ws/src/my_image_pub_pkg/my_image_pub_pkg/: image_pub.py  pub_node.py
ros2_ws/src/robopoint_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/robopoint_controller/config/: controller_params.yaml
ros2_ws/src/robopoint_controller/launch/: controller.launch.py
ros2_ws/src/robopoint_controller/robopoint_controller/: controller_node.py  utils.py
ros2_ws/src/robopoint_controller/robopoint_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ros2_ws/src/robopoint_gui/: package.xml  setup.cfg  setup.py
ros2_ws/src/robopoint_gui/robopoint_gui/: robopoint_gui_node.py
ros2_ws/src/robopoint_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/robopoint_interfaces/msg/: AffordancePoint.msg  GenerateRequest.msg  GenerateResponse.msg  HeartBeat.msg  SpatialAffordanceQuery.msg  SpatialAffordanceResponse.msg
ros2_ws/src/robopoint_interfaces/srv/: GetWorkerAddress.srv  ListModels.srv  ProcessImage.srv  RefreshAllWorkers.srv  WorkerGenerateStream.srv  WorkerGetStatus.srv
ros2_ws/src/robopoint_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/robopoint_msgs/msg/: GenerateRequest.msg  HeartBeat.msg  WorkerStatus.msg
ros2_ws/src/robopoint_msgs/srv/: GetWorkerAddress.srv  ListModels.srv  ReceiveHeartBeat.srv  RegisterWorker.srv  WorkerGenerateStream.srv  WorkerGetStatus.srv
ros2_ws/src/robopoint_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/robopoint_ros2/config/: robopoint_params.yaml
ros2_ws/src/robopoint_ros2/launch/: robopoint_launch.py
ros2_ws/src/robopoint_ros2/robopoint_ros2/: robopoint_client.py  robopoint_node.py
ros2_ws/src/robopoint_ros2/robopoint_ros2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ros2_ws/src/robopoint_stretch_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/robopoint_stretch_bridge/robopoint_stretch_bridge/: stretch_bridge.py
ros2_ws/src/robopoint_worker/: package.xml  setup.cfg  setup.py
ros2_ws/src/robopoint_worker/launch/: model_worker.launch.py
ros2_ws/src/robopoint_worker/robopoint_worker/: mm_utils.py  ros2_model_worker.py
ros2_ws/src/robopoint_worker/robopoint_worker/model/: builder.py  consolidate.py  llava_arch.py  make_delta.py
ros2_ws/src/robopoint_worker/robopoint_worker/model/language_model/: llava_llama.py  llava_mistral.py  llava_mpt.py
