<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robopoint_worker</name>
  <version>1.0.0</version>
  <description>ROS2 worker node example</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- buildtool 用 ament_python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 必要執行相依 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robopoint_interfaces</exec_depend>

  <!-- 測試工具 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 通知 ROS 這是 python 套件 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
